# inferrs

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.gemini/: styleguide.md
.github/scripts/: cuda-setup.sh
.github/workflows/: ci.yml  gpu-bench.yml  gpu-ci.yml  release.yml  sync-upstream.yml
backends/inferrs-backend-cann/: Cargo.toml
backends/inferrs-backend-cann/src/: lib.rs
backends/inferrs-backend-cuda/: Cargo.toml
backends/inferrs-backend-cuda/src/: lib.rs
backends/inferrs-backend-rocm/: Cargo.toml
backends/inferrs-backend-rocm/src/: lib.rs
backends/inferrs-backend-vulkan/: Cargo.toml
backends/inferrs-backend-vulkan/src/: lib.rs
candle-core/: Cargo.toml
candle-core/src/: cuda_flash_attn.rs  lib.rs
candle-core/src/quantized/: cuda.rs
candle-kernels/: build.rs
candle-kernels/src/: compatibility.cuh  ffi.rs  flash_attn.cu  indexing.cu  lib.rs  ptx.rs  quantized.cu
candle-kernels/src/moe/: moe_cublas_fallback.cu  moe_wmma.cu  moe_wmma_gguf.cu
candle-metal-kernels/: Cargo.toml
candle-metal-kernels/src/kernels/: sdpa.rs
candle-metal-kernels/src/metal_src/: scaled_dot_product_attention.metal
candle-nn/: Cargo.toml  Cargo.toml.orig
candle-nn/src/: lib.rs  moe.rs  moe_cublas.rs  ops.rs
demo/: index.html
inferrs/: Cargo.toml
inferrs-benchmark/: Cargo.toml
inferrs-benchmark/src/: main.rs
inferrs/src/: backend.rs  bench.rs  config.rs  engine.rs  hub.rs  kv_cache.rs  main.rs  pull.rs  rm.rs  run.rs  sampler.rs  server.rs  tokenizer.rs  turbo_quant.rs
inferrs/src/models/: attention_utils.rs  audio_encoder.rs  gemma4.rs  mod.rs  qwen3.rs  qwen3_5.rs  vision_encoder.rs
inferrs/tests/: server_integration.rs
src/: bench.rs  config.rs  engine.rs  hub.rs  kv_cache.rs  main.rs  run.rs  sampler.rs  scheduler.rs  server.rs  tokenizer.rs  turbo_quant.rs
src/models/: attention_utils.rs  mod.rs  qwen3.rs  qwen3_5.rs
tests/: server_integration.rs
