[workspace]
members = [
    "inferrs",
    "backends/inferrs-backend-cuda",
    "backends/inferrs-backend-rocm",
    "backends/inferrs-backend-vulkan",
]
# Default members exclude the CUDA/ROCm backends, which require the CUDA/ROCm
# toolchain (nvcc, nvidia-smi, hipcc) and only make sense on Linux with a GPU.
# `cargo build` (no -p flag) will only build these. To build a GPU backend
# explicitly: `cargo build -p inferrs-backend-cuda`
default-members = [
    "inferrs",
    "backends/inferrs-backend-vulkan",
]
resolver = "2"

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
anyhow = "1"

[profile.release]
lto = true

# Patch candle crates with local forks that add:
#   - SDPA vector kernel instantiations for head_dim=512 (Gemma4 global attention)
#   - supported_head_dim check updated to include 512
[patch.crates-io]
candle-metal-kernels = { path = "candle-metal-kernels" }
candle-nn = { path = "candle-nn" }
