[workspace]
members = [
    "inferrs",
    "inferrs-benchmark",
    "backends/inferrs-backend-cann",
    "backends/inferrs-backend-cuda",
    "backends/inferrs-backend-rocm",
    "backends/inferrs-backend-vulkan",
]
# Default members exclude GPU backends that require vendor-specific toolchains.
# `cargo build` (no -p flag) builds only the listed members.
# To build a specific backend explicitly:
#   cargo build -p inferrs-backend-cuda     (requires nvcc / CUDA SDK)
#   cargo build -p inferrs-backend-rocm     (requires hipcc / ROCm)
#   cargo build -p inferrs-backend-cann     (Linux/Android only; requires
#                                            libascendcl.so from CANN SDK)
default-members = [
    "inferrs",
    "inferrs-benchmark",
    "backends/inferrs-backend-vulkan",
]
resolver = "2"

[workspace.dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
anyhow = "1"

[profile.release]
lto = true

# Patch candle crates with local forks that add:
#   - SDPA vector kernel instantiations for head_dim=512 (Gemma4 global attention)
#   - supported_head_dim check updated to include 512
[patch.crates-io]
candle-metal-kernels = { path = "candle-metal-kernels" }
candle-nn = { path = "candle-nn" }
candle-core = { path = "candle-core" }
candle-kernels = { path = "candle-kernels" }
