[package]
name = "inferrs"
version = "0.1.0"
edition = "2021"
description = "A TurboQuant inference server"
license = "Apache-2.0"

[[bin]]
name = "inferrs"
path = "src/main.rs"

# On macOS, always enable Metal — in debug, release, and test builds alike.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { workspace = true, features = ["metal"] }
candle-nn = { workspace = true, features = ["metal"] }
candle-transformers = { workspace = true, features = ["metal"] }


[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ML / Tensor
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Tokenizer
tokenizers = { version = "0.21", features = [] }

# HuggingFace model hub
hf-hub = { version = "0.4", features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Half-precision types (bf16 / f16) — same version as candle-core to share the type
half = { version = "2.5", features = ["num-traits"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
anyhow = { workspace = true }
rayon = "1"
crossterm = "0.28"
indicatif = "0.17"
rustfft = "6"
base64 = "0.22"

# Linux: dynamic backend loading + CUDA device support.
# Enable the cuda feature so Device::new_cuda() is available at runtime.
# candle-core is patched (see [patch.crates-io] in the workspace Cargo.toml)
# to use cudarc with fallback-dynamic-loading instead of dynamic-linking,
# so libcuda / libcurand / libcublas are NOT hard-linked into the binary —
# they are dlopen'd (LoadLibrary on Windows) on demand when a CUDA device
# is first used.
[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"
candle-core = { workspace = true, features = ["cuda"] }
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = { workspace = true, features = ["cuda"] }

# Windows x86_64 only: CUDA is not available on Windows ARM.
[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
libloading = "0.8"
candle-core = { workspace = true, features = ["cuda"] }
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = { workspace = true, features = ["cuda"] }

# Android aarch64: dynamic backend loading for CANN (Huawei Ascend NPU).
# No CUDA feature — CUDA is not available on Android.  The CANN plugin is
# probed at runtime via libloading; libascendcl.so is dlopen'd on demand.
[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"

# Linux / Android: libc for low-level dlopen/dlsym used by the CANN HBM
# memory query in engine.rs (aclrtGetMemInfo via RTLD_NOLOAD).
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1"
