[package]
name = "inferrs"
version = "0.1.0"
edition = "2021"
description = "A TurboQuant inference server"
license = "Apache-2.0"

[[bin]]
name = "inferrs"
path = "src/main.rs"

# On macOS: always enable Metal, and add libloading to probe for
# the Vulkan/MoltenVK and OpenVINO plugins at runtime.
[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.8"
candle-core = { workspace = true, features = ["metal"] }
candle-nn = { workspace = true, features = ["metal"] }
candle-transformers = { workspace = true, features = ["metal"] }


[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ML / Tensor
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Tokenizer
tokenizers = { version = "0.21", features = [] }

# HuggingFace model hub
hf-hub = { version = "0.4", features = ["tokio"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Half-precision types (bf16 / f16) — same version as candle-core to share the type
half = { version = "2.5", features = ["num-traits"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
async-stream = "0.3"
anyhow = { workspace = true }
rayon = "1"
crossterm = "0.28"
indicatif = "0.17"
rustfft = "6"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Linux: dynamic backend loading + CUDA device support.
# Enable the cuda feature so Device::new_cuda() is available at runtime.
# candle-core is patched (see [patch.crates-io] in the workspace Cargo.toml)
# to use cudarc with fallback-dynamic-loading instead of dynamic-linking,
# so libcuda / libcurand / libcublas are NOT hard-linked into the binary —
# they are dlopen'd on demand when a CUDA device is first used.
[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"
candle-core = { workspace = true, features = ["cuda"] }
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = { workspace = true, features = ["cuda"] }

# Android: dynamic backend loading (CANN + Hexagon + Vulkan + OpenVINO); no CUDA.
[target.'cfg(target_os = "android")'.dependencies]
libloading = "0.8"

# Windows x86_64: CUDA + ROCm + Vulkan + OpenVINO plugin probing.
# CUDA is not available on Windows ARM, so this block is x86_64-only.
[target.'cfg(all(target_os = "windows", target_arch = "x86_64"))'.dependencies]
libloading = "0.8"
candle-core = { workspace = true, features = ["cuda"] }
candle-nn = { workspace = true, features = ["cuda"] }
candle-transformers = { workspace = true, features = ["cuda"] }


# Linux / Android: libc for low-level dlopen/dlsym used by the CANN HBM
# memory query in engine.rs (aclrtGetMemInfo via RTLD_NOLOAD).
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
libc = "0.2"

# Windows aarch64: no CUDA, but Hexagon + Vulkan + OpenVINO probes are useful.
[target.'cfg(all(target_os = "windows", target_arch = "aarch64"))'.dependencies]
libloading = "0.8"


[dev-dependencies]
ureq = { version = "2", features = ["json"] }
serde_json = "1"
